--- a/ImobBook/src/components/Content/Content.scss
+++ b/ImobBook/src/components/Content/Content.scss
@@ -1,15 +1,14 @@
 .content-body {
   width: 100%;
-  height: 100%;
+  height: 95vh;
   min-width: 380px;
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  align-content: center;
+  align-items: center;
   justify-content: center;
-
-  padding-top: 40rem;
   gap: 1rem;
-
-  overflow-y: scroll;  
+  
+  overflow-y: scroll;
+  padding-bottom: 2rem;
 }
