--- a/ImobBook/src/components/Header/Header.scss
+++ b/ImobBook/src/components/Header/Header.scss
@@ -1,5 +1,6 @@
 header {
   width: 100%;
+  height: 100px;
   min-width: 312px;
   display: flex;
   flex-direction: row;
@@ -13,13 +14,18 @@ header {
     height: 40px;
   }
 
+  img {
+    cursor: pointer;
+  }
+
+
   img.logo {
     width: 80px;
     height: 60px;
     object-fit: fill;    
   }
 
-  img.logo:hover{
+  img.logo:hover {
     cursor: pointer;
   }
 
